src/Domain/HydraScript.Domain.FrontEnd/Parser/grammar.txt
Script -> StatementList
StatementList -> StatementListItem*
StatementListItem -> Statement | Declaration
                     
Statement -> BlockStatement
             ExpressionStatement
             IfStatement
             WhileStatement
             ContinueStatement
             BreakStatement
             ReturnStatement
             OutputStatement
             InputStatement
             
Declaration -> LexicalDeclaration
               FunctionDeclaration
               TypeDeclaration
               
BlockStatement -> '{' StatementList '}'

ExpressionStatement -> Expression
Expression -> CastExpression | AssignmentExpression
CastExpression -> WithExpression 'as' TypeValue
AssignmentExpression -> MemberExpression '=' Expression

LeftHandSideExpression -> PrimaryExpression
                          ParenthesizedExpression
                          ComplexLiteral
                          MemberExpression
                          CallExpression

ParenthesizedExpression -> '(' Expression ')'

ComplexLiteral -> ObjectLiteral | ArrayLiteral

ObjectLiteral -> '{' PropertyDefinitionList '}'
PropertyDefinitionList -> (FieldProperty ';')*
FieldProperty -> "Ident" ':' Expression

ArrayLiteral -> '[' ElementList ']'
ElementList -> (Expression ',')*

CallExpression -> MemberExpression Arguments
MemberExpression -> Var ('[' Expression ']' | '.' 'Ident')*
Arguments -> '(' (Expression ',')* ')'

WithExpression -> ConditionalExpression 'with' ObjectLiteral
ConditionalExpression -> OrExpression ('?' Expression ':' Expression)?
OrExpression -> AndExpression ('||' AndExpression)*
AndExpression -> EqExpression ('&&' EqExpression)*
EqExpression -> RelExpression (('=='|'!=') RelExpression)*
RelExpression -> AddExpression (('<'|'>'|'<='|'>=') AddExpression)*
AddExpression -> MulExpression (('+'|'-') MulExpression)*
MulExpression -> UnaryExpression (('*'|'/'|'%'|'++'|'::') UnaryExpression)*
UnaryExpression -> LeftHandSideExpression | ('-'|'!'|'~') UnaryExpression

PrimaryExpression -> Var | Literal
Var -> "Ident" | EnvVar
EnvVar -> '$' "Ident"
Literal -> "NullLiteral"
           "IntegerLiteral"
           "FloatLiteral"
           "StringLiteral"
           "BooleanLiteral"
             
IfStatement -> 'if' '(' Expression ')' Statement ('else' Statement)?

WhileStatement -> 'while' '(' Expression ')' Statement

ContinueStatement -> 'continue'

BreakStatement -> 'break'

ReturnStatement -> 'return' Expression?

OutputStatement -> '>>>' Expression
InputStatement -> '<<<' (Ident | EnvVar)

TypeDeclaration -> 'type' "Ident" = TypeValue
TypeValue -> TypeValueBase TypeValueSuffix*
TypeValueBase -> "Ident"
                 ObjectTypeBase
ObjectTypeBase -> '{' PropertyTypeList '}'
PropertyTypeList -> (PropertyType ';')*
PropertyType -> "Ident" ':' TypeValue
ArgTypeList -> (TypeValue ',')*
TypeValueSuffix -> '['']'
                   '?'
 
LexicalDeclaration -> LetOrConst "Ident" Initialization (',' "Ident" Initialization)*
LetOrConst -> 'let'
              'const'
Initialization -> Typed
                  Initializer
Typed -> Type Initializer?
Initializer -> '=' Expression

FunctionDeclaration -> 'function' "Ident" '(' FunctionParameters? ')' Type? BlockStatement
FunctionParameters -> (ParameterDeclaration ',')*
ParameterDeclaration -> "Ident" (Type | DefaultValue)
Type -> ':' TypeValue
DefaultValue -> '=' Literal
